--- a/fluxer_app/src/features/user/components/popouts/UserProfileShared.module.css
+++ b/fluxer_app/src/features/user/components/popouts/UserProfileShared.module.css
@@ -4,8 +4,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	padding-block: 0.125rem;
-	margin-block: -0.125rem;
 }
 
 .bioClamped {
@@ -14,8 +12,6 @@
 	-webkit-line-clamp: 3;
 	line-clamp: 3;
 	overflow: hidden;
-	padding-block: 0.125rem;
-	margin-block: -0.125rem;
 }
 
 .viewFullButton {
@@ -163,8 +159,6 @@
 .connectionsCompactSeparator {
 	background: var(--background-modifier-hover);
 	height: 0.0625rem;
-	margin-bottom: 0.25rem;
-	margin-top: 0.25rem;
 }
 
 .connectionsCompact {
